--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -3,7 +3,7 @@
         <td><img src="{{site.baseurl}}/images/logo.png" height="60" title="Home" alt=""></td>
         <td><a href="{{site.baseurl}}/devops/tools/home">Home</a></td>
         <td><a href="{{site.baseurl}}/devops/tools/accounts">Accounts</a></td>
-        <td><a href="{{site.baseurl}}/navigation/section/csse">Games</a></td>
+        <td><a href="{{site.baseurl}}/cookie_clicker">Cookie_clicker</a></td>
         <td><a href="{{site.baseurl}}/navigation/section/csp">CSP</a></td>
         <td><a href="{{site.baseurl}}/navigation/section/csa">CSA</a></td>
         <td><a href="{{site.baseurl}}/snake">Snake</a></td>
