Adding new games into my home page

--- a/_includes/nav/home.html
+++ b/_includes/nav/home.html
@@ -4,8 +4,8 @@
         <td><a href="{{site.baseurl}}/devops/tools/home">Home</a></td>
         <td><a href="{{site.baseurl}}/devops/tools/accounts">Accounts</a></td>
         <td><a href="{{site.baseurl}}/cookie">Cookie_clicker</a></td>
-        <td><a href="{{site.baseurl}}/navigation/section/csp">CSP</a></td>
-        <td><a href="{{site.baseurl}}/navigation/section/csa">CSA</a></td>
+        <td><a href="{{site.baseurl}}/pong">Pong</a></td>
+        <td><a href="{{site.baseurl}}/Article">Article</a></td>
         <td><a href="{{site.baseurl}}/snake">Snake</a></td>
         <td id="loginArea"><a href="{{site.baseurl}}/login">Login</a></td>
         
