added a final project

--- a/_includes/post_list_image_card.html
+++ b/_includes/post_list_image_card.html
@@ -20,6 +20,6 @@
       <!-- Post description paragraph -->
       <p class="post-meta-description">{{ post.description }}</p>
       <!-- Post date paragraph, formatted according to the date_format variable -->
-      <p class="post-meta">{{ post.date | date: date_format }}</p>
+      <p class="post-meta-description">{{ post.date | date: date_format }}</p>
   </div>
 </div>
